Add sifting job appender that logs into files per job, e.g. for releases or imports

--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -440,6 +440,21 @@
           </gitDescribe>
         </configuration>
       </plugin>
+
+      <!--
+          <parallel>classes</parallel>
+          <threadCount>4</threadCount>
+          <useUnlimitedThreads>false</useUnlimitedThreads>
+      -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <parallel>none</parallel>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
