--- a/pom.xml
+++ b/pom.xml
@@ -102,20 +102,20 @@
 
     <!-- Maven plugin versions. Check for available updates: mvn versions:display-plugin-updates -->
     <depgraph-maven-plugin>3.3.0</depgraph-maven-plugin>
-    <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
+    <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
     <jaxb2_commons.version>0.12.0</jaxb2_commons.version>
     <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
     <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
-    <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <maven-git-commit-id-plugin.version>4.0.4</maven-git-commit-id-plugin.version>
-    <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
+    <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
     <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
-    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+    <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
     <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
     <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
     <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
     <versions-maven-plugin.version>2.8.1</versions-maven-plugin.version>
     <xjc-guava-plugin.version>0.3</xjc-guava-plugin.version>
 
@@ -177,6 +177,14 @@
       </snapshots>
     </repository>
     <repository>
+      <id>central</id>
+      <url>https://repo1.maven.org/maven2</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+    <!--
+    <repository>
       <id>gbif-thirdparty</id>
       <url>https://repository.gbif.org/repository/thirdparty</url>
     </repository>
@@ -191,7 +199,20 @@
         <updatePolicy>always</updatePolicy>
       </snapshots>
     </repository>
+    -->
   </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>central</id>
+      <url>https://repo1.maven.org/maven2</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
 
   <modules>
     <module>api</module>
@@ -956,7 +977,7 @@
             We have static information in tests se we cannot share the same JVM to run tests
             See https://maven.apache.org/surefire/maven-surefire-plugin/examples/fork-options-and-parallel-execution.html
             -->
-            <forkCount>4</forkCount>
+            <forkCount>1</forkCount>
             <reuseForks>false</reuseForks>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <!-- mem settings may not be necessary but the 3rd arg is. See here: -->
