--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -172,8 +172,21 @@
 		</dependency>
 		<dependency>
 			<groupId>com.twelvemonkeys.imageio</groupId>
-			<artifactId>imageio-icns</artifactId>
+			<artifactId>imageio-webp</artifactId>
 		</dependency>
+        <dependency>
+          <groupId>com.twelvemonkeys.imageio</groupId>
+          <artifactId>imageio-batik</artifactId><!-- svg -->
+        </dependency>
+        <dependency>
+          <groupId>com.twelvemonkeys.imageio</groupId>
+          <artifactId>imageio-icns</artifactId>
+        </dependency>
+      <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>batik-transcoder</artifactId>
+        <version>1.15</version>
+      </dependency>
 
 		<dependency>
 			<groupId>javax.validation</groupId>
