New homotypic grouping tests with plain text trees and support for sector priorities in tt data

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
     <simple-mail.version>8.0.0</simple-mail.version>
     <stax2.version>4.2.1</stax2.version>
     <testcontainers.version>1.17.6</testcontainers.version>
-    <text-tree.version>1.0.0</text-tree.version>
+    <text-tree.version>1.1.2</text-tree.version>
     <tika.version>1.22</tika.version>
     <twelvemonkeys.version>3.9.4</twelvemonkeys.version>
     <validation-api.version>2.0.0.Final</validation-api.version>
@@ -506,6 +506,11 @@
         <groupId>org.gbif</groupId>
         <artifactId>dwca-io</artifactId>
         <version>${dwca-io.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gbif</groupId>
+        <artifactId>text-tree</artifactId>
+        <version>${text-tree.version}</version>
       </dependency>
 
       <!-- mybatis / DB -->
