--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -81,6 +81,10 @@
           <groupId>org.catalogueoflife</groupId>
           <artifactId>newick-io</artifactId>
         </dependency>
+      <dependency>
+        <groupId>org.gbif</groupId>
+        <artifactId>text-tree</artifactId>
+      </dependency>
 
 		<!-- mybatis / DB -->
 		<dependency>
