--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -147,7 +147,10 @@
       <groupId>org.gbif</groupId>
       <artifactId>dwca-io</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.gbif</groupId>
+      <artifactId>text-tree</artifactId>
+    </dependency>
     <!-- DB -->
     <dependency>
       <groupId>org.mybatis</groupId>
