--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.catalogueoflife</groupId>
     <artifactId>motherpom</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0TEST-SNAPSHOT</version>
   </parent>
 
   <artifactId>api</artifactId>
