--- a/coldp/pom.xml
+++ b/coldp/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.catalogueoflife</groupId>
     <artifactId>motherpom</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0TEST-SNAPSHOT</version>
   </parent>
 
   <artifactId>coldp</artifactId>
