--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.catalogueoflife</groupId>
     <artifactId>motherpom</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0TEST-SNAPSHOT</version>
   </parent>
   <artifactId>webservice</artifactId>
   <name>COL WS</name>
