Revert "Add migration sql and use 1.0TEST-SNAPSHOT version for test deploys"
This reverts commit a8b01fb7562677a08a195475dc570cdaa8d4b197.

--- a/doi/pom.xml
+++ b/doi/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.catalogueoflife</groupId>
     <artifactId>motherpom</artifactId>
-    <version>1.0TEST-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>doi</artifactId>
