--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <dropwizard.version>2.1.5</dropwizard.version>
     <dwc-api.version>1.47</dwc-api.version>
     <dwca-io.version>2.13</dwca-io.version>
-    <elasticsearch.version>8.1.1</elasticsearch.version>
+    <elasticsearch.version>8.1.3</elasticsearch.version>
     <fastutil.version>8.5.12</fastutil.version>
     <ganglia.version>1.0.7</ganglia.version>
     <gbif-api.version>1.4.0</gbif-api.version>
@@ -196,6 +196,7 @@
 
   <modules>
     <module>api</module>
+    <module>coldp</module>
     <module>dao</module>
     <module>doi</module>
     <module>metadata</module>
@@ -203,7 +204,7 @@
     <module>reader</module>
     <module>reader-xls</module>
     <module>webservice</module>
-    <module>coldp</module>
+    <module>apianalytics</module>
   </modules>
 
   <distributionManagement>
@@ -601,6 +602,17 @@
         <artifactId>elasticsearch-rest-client</artifactId>
         <version>${elasticsearch.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.elasticsearch</groupId>
+        <artifactId>elasticsearch-core</artifactId>
+        <version>${elasticsearch.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.elasticsearch</groupId>
+        <artifactId>elasticsearch</artifactId>
+        <version>${elasticsearch.version}</version>
+      </dependency>
+
       <!-- httpcore needs at least 4.4.7 for dropwizard. ES 6.5 uses 4.4.5 still -->
       <dependency>
         <groupId>org.apache.httpcomponents</groupId>
