--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -285,6 +285,12 @@
         <artifactId>postgresql</artifactId>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.10.2</version>
+        <scope>test</scope>
+      </dependency>
 	</dependencies>
 
 </project>
