--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -69,7 +69,11 @@
 			<groupId>org.catalogueoflife</groupId>
 			<artifactId>parser</artifactId>
 		</dependency>
-        <dependency>
+      <dependency>
+        <groupId>org.catalogueoflife</groupId>
+        <artifactId>pgcopy</artifactId>
+      </dependency>
+      <dependency>
           <groupId>org.catalogueoflife</groupId>
           <artifactId>doi</artifactId>
         </dependency>
