--- a/pom.xml
+++ b/pom.xml
@@ -72,13 +72,13 @@
     <jcommander.version>1.82</jcommander.version>
     <jjwt.version>0.11.5</jjwt.version>
     <jsoup.version>1.15.4</jsoup.version>
-    <junit.version>4.12</junit.version>
+    <junit.version>5.9.2</junit.version>
     <kryo-serializers.version>0.45</kryo-serializers.version>
     <kryo.version>5.4.0</kryo.version>
     <kryo-reflectasm.version>1.11.9</kryo-reflectasm.version>
     <logstash-logback.version>6.4</logstash-logback.version>
     <mapdb.version>3.0.9</mapdb.version>
-    <mockito.version>3.1.0</mockito.version>
+    <mockito.version>3.3.3</mockito.version>
     <mybatis.version>3.5.13</mybatis.version>
     <name-parser.version>3.10.2-SNAPSHOT</name-parser.version>
     <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
@@ -761,8 +761,14 @@
 
       <!-- TEST SCOPE -->
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
         <version>${junit.version}</version>
         <scope>test</scope>
       </dependency>
