--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
         by these BOMs (use the right versions):
 
         Main two Dropwizard BOMs:
-        https://github.com/dropwizard/dropwizard/blob/v2.1.4/dropwizard-bom/pom.xml
-        https://github.com/dropwizard/dropwizard/blob/v2.1.4/dropwizard-dependencies/pom.xml
+        https://github.com/dropwizard/dropwizard/blob/v2.1.5/dropwizard-bom/pom.xml
+        https://github.com/dropwizard/dropwizard/blob/v2.1.5/dropwizard-dependencies/pom.xml
 
-        Which also imports the Jersey BOM: https://github.com/eclipse-ee4j/jersey/blob/2.37/bom/pom.xml
-        and Jackson BOM: https://github.com/FasterXML/jackson-bom/blob/jackson-bom-2.13.4.20221013/pom.xml
+        Which also imports the Jersey BOM: https://github.com/eclipse-ee4j/jersey/blob/2.39/bom/pom.xml
+        and Jackson BOM: https://github.com/FasterXML/jackson-bom/blob/jackson-bom-2.13.5/pom.xml
 
         These BOMs manage dependency versions for many things including:
         commons-lang3, caffeine, guava, jersey, commons-text, servlet api, httpclient,
@@ -80,7 +80,7 @@
     <mapdb.version>3.0.9</mapdb.version>
     <mockito.version>3.3.3</mockito.version>
     <mybatis.version>3.5.13</mybatis.version>
-    <name-parser.version>3.10.2-SNAPSHOT</name-parser.version>
+    <name-parser.version>3.11.0</name-parser.version>
     <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
     <neo4j.version>3.4.17</neo4j.version>
     <newick-io.version>1.0.6</newick-io.version>
