--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 
   <properties>
     <!-- build settings -->
-    <minimumMavenVersion>3.6.3</minimumMavenVersion>
-    <java.version>11</java.version>
+    <minimumMavenVersion>3.9.5</minimumMavenVersion>
+    <java.version>21</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -33,10 +33,10 @@
         by these BOMs (use the right versions):
 
         Main two Dropwizard BOMs:
-        https://github.com/dropwizard/dropwizard/blob/v2.1.5/dropwizard-bom/pom.xml
-        https://github.com/dropwizard/dropwizard/blob/v2.1.5/dropwizard-dependencies/pom.xml
+        https://github.com/dropwizard/dropwizard/blob/v2.1.12/dropwizard-bom/pom.xml
+        https://github.com/dropwizard/dropwizard/blob/v2.1.12/dropwizard-dependencies/pom.xml
 
-        Which also imports the Jersey BOM: https://github.com/eclipse-ee4j/jersey/blob/2.39/bom/pom.xml
+        Which also imports the Jersey BOM: https://github.com/eclipse-ee4j/jersey/blob/2.41/bom/pom.xml
         and Jackson BOM: https://github.com/FasterXML/jackson-bom/blob/jackson-bom-2.13.5/pom.xml
 
         These BOMs manage dependency versions for many things including:
@@ -52,13 +52,13 @@
     <commons-compress.version>1.22</commons-compress.version>
     <commons-io.version>2.11.0</commons-io.version>
     <copy_down.version>1.1</copy_down.version>
-    <dropwizard.version>2.1.5</dropwizard.version>
+    <dropwizard.version>2.1.12</dropwizard.version>
     <dwc-api.version>1.47</dwc-api.version>
     <dwca-io.version>2.13</dwca-io.version>
     <elasticsearch.version>8.1.3</elasticsearch.version>
     <fastutil.version>8.5.12</fastutil.version>
     <ganglia.version>1.0.7</ganglia.version>
-    <gbif-api.version>1.4.0</gbif-api.version>
+    <gbif-api.version>1.14.2</gbif-api.version>
     <hikaricp.version>5.0.1</hikaricp.version>
     <hk2.version>2.5.0-b32</hk2.version>
     <!-- even though managed in DW BOM, it conflicts with ES BOM and we gotta manage this manually -->
@@ -77,6 +77,7 @@
     <kryo.version>5.4.0</kryo.version>
     <kryo-reflectasm.version>1.11.9</kryo-reflectasm.version>
     <logstash-logback.version>6.4</logstash-logback.version>
+    <lombok.version>1.18.30</lombok.version>
     <mapdb.version>3.0.9</mapdb.version>
     <mockito.version>3.3.3</mockito.version>
     <mybatis.version>3.5.13</mybatis.version>
@@ -104,7 +105,7 @@
     <exec-maven-plugin.version>3.2.0</exec-maven-plugin.version>
     <jaxb2_commons.version>0.12.0</jaxb2_commons.version>
     <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
-    <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
+    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
     <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
     <maven-git-commit-id-plugin.version>4.9.10</maven-git-commit-id-plugin.version>
@@ -113,7 +114,7 @@
     <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <maven-shade-plugin.version>3.5.2</maven-shade-plugin.version>
-    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+    <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
     <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
     <versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>
     <xjc-guava-plugin.version>0.3</xjc-guava-plugin.version>
@@ -494,6 +495,12 @@
         <groupId>org.gbif</groupId>
         <artifactId>gbif-api</artifactId>
         <version>${gbif-api.version}</version>
+      </dependency>
+      <dependency>
+        <!-- lombok from the GBIF API is at 1.18.24 which does not work with JDK21 -->
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.version}</version>
       </dependency>
       <dependency>
         <groupId>org.gbif</groupId>
