Add taxon alignment service using the listtools docker container. Adds a simpler printer method to print entire datasets when no ordering is required, e.g. exports and alignments

--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -16,6 +16,13 @@
   </properties>
 
   <dependencies>
+    <!--
+    -->
+    <dependency>
+      <groupId>com.github.docker-java</groupId>
+      <artifactId>docker-java</artifactId>
+      <version>3.2.13</version><!--keep in sync with test containers -->
+    </dependency>
     <!-- Dropwizard -->
     <dependency>
       <groupId>io.dropwizard</groupId>
