Connect to configurable docker host and pull image from registry if missing

--- a/webservice/src/test/resources/config-test.yaml
+++ b/webservice/src/test/resources/config-test.yaml
@@ -63,3 +63,6 @@ job:
   threads: 2
   queue: 100
   downloadURI: "http://localhost"
+docker:
+  registry: docker.gbif.org
+  host: unix:///var/run/docker.sock
