--- a/pom.xml
+++ b/pom.xml
@@ -60,42 +60,40 @@
     <dwc-api.version>1.47</dwc-api.version>
     <dwca-io.version>2.13</dwca-io.version>
     <elasticsearch.version>8.1.3</elasticsearch.version>
-    <fastutil.version>8.5.12</fastutil.version>
+    <fastutil.version>8.5.13</fastutil.version>
     <ganglia.version>1.0.7</ganglia.version>
     <gbif-api.version>1.16.2</gbif-api.version>
-    <hikaricp.version>5.0.1</hikaricp.version>
-    <hk2.version>2.5.0-b32</hk2.version>
-    <icu4j.version>72.1</icu4j.version>
+    <hikaricp.version>5.1.0</hikaricp.version>
+    <icu4j.version>75.1</icu4j.version>
     <jakarta.xml.version>2.3.3</jakarta.xml.version>
     <jakarta.el.version>4.0.1</jakarta.el.version>
     <java-diff-utils.version>4.12</java-diff-utils.version>
     <javers.version>6.8.0</javers.version>
     <jbibtex.version>1.0.20</jbibtex.version>
-    <jcommander.version>1.82</jcommander.version>
     <jjwt.version>0.11.5</jjwt.version>
-    <jsoup.version>1.15.4</jsoup.version>
+    <jsoup.version>1.17.2</jsoup.version>
     <junit.version>5.10.2</junit.version>
     <kryo.version>5.6.0</kryo.version>
     <kryo-reflectasm.version>1.11.9</kryo-reflectasm.version>
-    <logstash-logback.version>6.4</logstash-logback.version>
+    <logstash-logback.version>7.4</logstash-logback.version>
     <lombok.version>1.18.30</lombok.version>
-    <mapdb.version>3.0.9</mapdb.version>
+    <mapdb.version>3.1.0</mapdb.version>
     <mockito.version>3.3.3</mockito.version>
-    <mybatis.version>3.5.13</mybatis.version>
+    <mybatis.version>3.5.16</mybatis.version>
     <name-parser.version>3.12.0-SNAPSHOT</name-parser.version>
     <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
     <neo4j.version>3.4.17</neo4j.version>
     <newick-io.version>1.0.6</newick-io.version>
     <poi.version>5.2.3</poi.version>
-    <postgresql.version>42.5.4</postgresql.version>
+    <postgresql.version>42.7.3</postgresql.version>
     <scribejava.version>8.3.1</scribejava.version>
     <simple-mail.version>8.0.0</simple-mail.version>
-    <stax2.version>4.2.1</stax2.version>
+    <stax2.version>4.2.2</stax2.version>
     <testcontainers.version>1.17.6</testcontainers.version>
     <text-tree.version>1.4.1-SNAPSHOT</text-tree.version>
-    <tika.version>1.22</tika.version>
-    <twelvemonkeys.version>3.9.4</twelvemonkeys.version>
-    <woodstox.version>4.4.1</woodstox.version>
+    <tika.version>2.9.2</tika.version>
+    <twelvemonkeys.version>3.11.0</twelvemonkeys.version>
+    <woodstox.version>6.6.2</woodstox.version>
     <imgscalr.version>4.2</imgscalr.version>
     <univocity-parsers.version>2.9.1</univocity-parsers.version>
 
@@ -360,23 +358,6 @@
         <version>${dropwizard.version}</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-
-      <!-- HK2 dependency injection - follow closely the version used by Jersey via Dropwizard -->
-      <dependency>
-        <groupId>org.glassfish.hk2</groupId>
-        <artifactId>hk2-api</artifactId>
-        <version>${hk2.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.glassfish.hk2</groupId>
-        <artifactId>hk2-locator</artifactId>
-        <version>${hk2.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.glassfish.hk2</groupId>
-        <artifactId>hk2-utils</artifactId>
-        <version>${hk2.version}</version>
       </dependency>
 
       <dependency>
@@ -645,11 +626,6 @@
 
       <!-- other -->
       <dependency>
-        <groupId>com.beust</groupId>
-        <artifactId>jcommander</artifactId>
-        <version>${jcommander.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.jsoup</groupId>
         <artifactId>jsoup</artifactId>
         <version>${jsoup.version}</version>
@@ -711,8 +687,8 @@
         <version>${citeproc-styles.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.woodstox</groupId>
-        <artifactId>woodstox-core-asl</artifactId>
+        <groupId>com.fasterxml.woodstox</groupId>
+        <artifactId>woodstox-core</artifactId>
         <version>${woodstox.version}</version>
       </dependency>
       <dependency>
