--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -200,6 +200,10 @@
       <groupId>com.github.docker-java</groupId>
       <artifactId>docker-java</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.docker-java</groupId>
+      <artifactId>docker-java-transport-httpclient5</artifactId>
+    </dependency>
 
     <!-- collections & CSV -->
     <dependency>
