--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -56,6 +56,12 @@
 	</build>
 
 	<dependencies>
+      <dependency>
+        <groupId>net.openhft</groupId>
+        <artifactId>chronicle-map</artifactId>
+        <version>3.25ea6</version>
+      </dependency>
+
 		<!-- CoL & GBIF -->
       <dependency>
         <groupId>org.catalogueoflife</groupId>
@@ -240,7 +246,7 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
-      <!-- hibernate validator in tests includes jakarta.el -->
+      <!-- hibernate validator in tests requires jakarta.el -->
       <dependency>
         <groupId>org.hibernate.validator</groupId>
         <artifactId>hibernate-validator</artifactId>
