Additional work for: https://github.com/CatalogueOfLife/backend/issues/1302 Changes to fit with c-deploy/deploy-plugin/gbif-configuration Inclusion of zookeeper dependencies Changes to allow for generation of index on initial run, then running of webapp Ability to configure datasets to be indexed in application.yml to fit with c-deploy etc Removed returns so that application still starts if CLB API is unavailable removed misleading log messages Cleanup of IDs Additional legacy services for backwards compatibility to work with existing kvs + pipelines Actuator for logging Logging of request times inclusion of nomcode in v2 responses

--- a/matching-ws/Dockerfile-local
+++ b/matching-ws/Dockerfile-local
@@ -60,10 +60,9 @@ FROM openjdk:11
 # Set environment variables
 ARG DEBIAN_FRONTEND=noninteractive
 ENV SERVER_PORT=8080
-ENV JVM_OPTIONS="-Xmx2g -Xms2g"
+ENV JVM_OPTIONS="-Xms1g -Xmx4g"
 ENV USER=matching
 ENV APP_ARTIFACT=matching-ws
-ENV V1_ENABLED="true"
 
 # Set environment variables
 ARG CLB_DATASET_ID=""
@@ -88,8 +87,8 @@ COPY --from=builder /app/backend/dataset.json /opt/gbif/$APP_ARTIFACT/dataset.js
 
 # CSV export from checklistbank
 RUN if [ -n "$CLB_DATASET_ID" ]; then \
-        java -jar app.jar \
-        --mode=BUILD_INDEX \
+        java $JVM_OPTIONS -jar app.jar \
+        --mode=INDEX \
         --index.path=/data/$APP_ARTIFACT/index \
         --export.path=/data/$APP_ARTIFACT/exports \
         --clb.dataset.id=$CLB_DATASET_ID \
@@ -105,4 +104,4 @@ RUN chown -R $USER:$USER /opt/gbif/$APP_ARTIFACT
 USER $USER
 EXPOSE $SERVER_PORT
 
-CMD java $JVM_OPTIONS -jar app.jar --server.port=$SERVER_PORT --v1.enabled=$V1_ENABLED --working.dir=/opt/gbif/$APP_ARTIFACT
+CMD java $JVM_OPTIONS -jar app.jar --server.port=$SERVER_PORT --working.dir=/opt/gbif/$APP_ARTIFACT --mode=RUN
